# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml  uncomment_step3.py
backend/app/routers/: items.py
mcp/mcp_lms/: server.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/: query_lms.py
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
