[project]
name = "nanobot"
version = "0.1.0"
description = "nanobot agent"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "lms-mcp",
    "nanobot-ai",
    "nanobot-webchat",
]

[tool.uv.sources]
lms-mcp = { path = "../mcp", editable = true }
nanobot-webchat = { path = "../nanobot-websocket-channel/nanobot-webchat", editable = true }
